fix hidden scrollbar on firefox

--- a/public/css/general/contributions.css
+++ b/public/css/general/contributions.css
@@ -205,6 +205,7 @@
     linear-gradient(to bottom, rgba(245, 245, 245, 0), rgba(245, 245, 245, 0.4), rgba(245, 245, 245, 0));
   border-right: 1px solid transparent;
   padding-right: 10%;
+  scrollbar-width: none;
 }
 .contributions-navbar-content-wrapper::-webkit-scrollbar {
   display: none;
